# personal-website

./: CLAUDE.md  commit_details.txt
.github/workflows/: docker-push.yml
backend/: .gitignore  CLAUDE.md  Dockerfile  main.py  pyproject.toml
backend/ai-docs/: auth_conv.md  task.md
backend/content/: agent-auth.md  distributed-processing.md  event-blogpost.md  multi-agentic-system.md  sample-blogpost.md  self-reflection-production.md  state-space-reduction.md
backend/core/api/v1/: content.py  router.py
backend/scripts/: gcp_push_artifact_and_trigger_newbuild.sh
frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.app.json  wrangler.toml
frontend/.claude/: task.md  task2.md  task3.md
frontend/ai-docs/: available-to-use.md  cms_notes.md
frontend/public/: resume.md
frontend/src/: Layout.tsx  index.css  router.tsx
frontend/src/components/: ContentSection.tsx  MarkdownRenderer.tsx  TableOfContents.tsx
frontend/src/components/about/: BuildingSection.tsx  ContactLinks.tsx  CurrentSection.tsx  EarlyDaysSection.tsx  InterestsSection.tsx  IntroSection.tsx  PhilosophySection.tsx  SFJourneySection.tsx  TurningPointSection.tsx  YaleSection.tsx  index.ts
frontend/src/hooks/: useScrollSpy.ts
frontend/src/pages/: About.tsx  BlogList.tsx  BlogPost.tsx  Homepage.tsx  ProfessionalHistory.tsx  Resume.tsx
frontend/src/types/: index.ts
frontend/thinking-docs/: anudeep_about.md
scripts/: compare_files_two_directories.sh  gcp_env_setup.sh
